--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,16 +38,17 @@ article {
 }
 
 .card-content p {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.5;
   color: #6B6B6B;
+  font-weight: 300;
 }
 
 .category {
   display: inline-block;
   font-size: 12px;
   background-color: #F4D04E;
-  padding: 4px 12px;
+  padding: 8px 12px;
   max-width: fit-content;
   border-radius: 4px;
 }
